# wikidata-orthologs-bot

./: .gitignore  README.md  pyproject.toml
src/wikidata_orthologs_bot/: oma.py  omarallel.py
